--- a/frontend/src/Explorer/View/address.css
+++ b/frontend/src/Explorer/View/address.css
@@ -178,4 +178,8 @@
     background-color: var(--color7); /* overridden */
   }
 
+  &__tx-container {
+    lost-utility: clearfix;
+  }
+
 }
